# DICOMFlow

./: .gitignore  DEVELOPMENT.md  DIMSE_IMPLEMENTATION.md  DISTRIBUTION_GUIDE.md  PROJECT_STATUS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build.yml
docs/: index.html
docs/developer-guide/: architecture.md  building.md
docs/educational/: dicom-basics.md
docs/user-guide/: dicomweb-testing.md  quick-start.md
src/: App.svelte  app.css  routes.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/migrations/: 20250111000001_initial_schema.sql
src-tauri/src/: main.rs
src-tauri/src/commands/: dicomweb.rs  dimse.rs  export.rs  file.rs  mod.rs  tags.rs  viewer.rs
src-tauri/src/database/: mod.rs  models.rs  schema.rs
src-tauri/src/dicom/: anonymizer.rs  mod.rs  parser.rs  pixeldata.rs  tags.rs
src-tauri/src/dicomweb/: client.rs  config.rs  mod.rs  qido.rs  stow.rs  wado.rs
src-tauri/src/dimse/: config.rs  mod.rs  scp.rs  scu.rs
src-tauri/src/utils/: file_helpers.rs  logging.rs  mod.rs
src-tauri/tests/integration/: test_dimse.rs
src-tauri/tests/unit/: test_dicom_parser.rs
src/routes/: Dashboard.svelte  DicomWeb.svelte  Dimse.svelte  Settings.svelte  TagEditor.svelte  Viewer.svelte
src/stores/: activeStudyStore.js  connectionStore.js  loadingStore.js  requestHistoryStore.js  settingsStore.js  tagEditorStore.js
test-data/: README.md
website/: CNAME  README.md  index.html
(+5 files in other folders)
