[package]
name = "dicomflow"
version = "0.1.0"
description = "DICOMFlow"
authors = ["Your Name"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"

# DICOM
dicom-core = "0.7"
dicom-object = "0.7"
dicom-pixeldata = "0.7"
dicom-ul = "0.7"
dicom-dictionary-std = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"

# Image processing
image = "0.24"

# Base64 encoding
base64 = "0.21"

# Hashing for anonymization
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
